fix: size word wrap of the name and focus

--- a/style.css
+++ b/style.css
@@ -30,6 +30,14 @@ body {
   border-radius: 10px;
 }
 
+#focus {
+  max-width: 600px;
+  width: 100%;
+  word-break: break-all;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+}
+
 .time,
 h1,
 h2,
@@ -45,8 +53,11 @@ h2,
 }
 
 h1 {
+  max-width: 600px;
+  width: 100%;
   padding: 2px 10px;
   margin-bottom: 2em;
+  word-break: break-all;
 }
 
 h2 {
